# TodoList_CiProject

./: .gitignore  BasicInfo.c  BasicInfo.h  BasicInfoMac.c  BasicInfoMac.h  CompleteCheck.c  CompleteCheckMac.c  DeleteTodoListMac.c  EditDate.c  EditDateMac.c  EditImportance.c  EditImportanceMac.c  EditTodoListMac.c  InputTodoListMac.c  Memo.txt  README.md  TodoList  git_test.txt  mainMac.c  test.txt  배준혁 피드백.md  종합보고자료.txt  주현아 피드백.md  최지웅 보고자료.txt
TodoList_Unix/: BasicInfo.c  BasicInfo.h  BasicInfoMac.c  BasicInfoMac.h  CMakeLists.txt  CompleteCheck.c  CompleteCheckMac.c  CompleteCheckMac.h  DeleteTodoList.c  DeleteTodoListMac.c  DeleteTodoListMac.h  EditDate.c  EditDateMac.c  EditImportance.c  EditImportanceMac.c  EditTodoList.c  EditTodoListMac.c  EditTodoListMac.h  InputTodoList.c  InputTodoListMac.c  main.c  mainMac.c
TodoList_Window/: BasicInfo.c  BasicInfo.h  CMakeLists.txt  CompleteCheck.c  CompleteCheck.h  DeleteTodoList.c  DeleteTodoList.h  EditDate.c  EditDate.h  EditImportance.c  EditImportance.h  EditTodoList.c  EditTodoList.h  InputTodoList.c  InputTodoList.h  main.c
