project(TodoList)

add_executable(
    TodoList
    BasicInfoMac.h
    BasicInfoMac.c
    CompleteCheckMac.c
    CompleteCheckMac.h
    DeleteTodoListMac.c
    DeleteTodoListMac.h
    EditDateMac.c
    EditDateMac.h
    EditImportanceMac.c
    EditImportanceMac.h
    EditTodoListMac.c
    EditTodoListMac.h
    InputTodoListMac.c
    InputTodoListMac.h
    mainMac.c
)